--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -38,7 +38,8 @@ tableofcontents}
 \setcounter{secnumdepth}{1}
 
 
-\title{Research skills - an introduction to the crafts of a scientist}
+\title{Research skills\\
+\large{An introduction to the crafts of a scientist}}
 \author{Florian Hartig, University of Freiburg}
 
 \begin{document}
@@ -64,22 +65,25 @@ A common saying is that history repeats itself. In science, that is not strictly
 
 \section{The scientific method}
 
+
 \subsection{The scientific method - official version}
 
 
 \subsection{The scientific method - b-side}
 
 
+\chapter{Finding a scientific question}
 
-\chapter{Finding a good question}
+\section{What are valid scientific questions?}
 
+\section{Good scientific questions}
 
 \section{Literature - standing on the shoulders of giants}
 
 in the following chapters, we'll speak about logic, empiricism 
 
 
-\chapter{Logic and rationale thinking}
+\chapter{Rationale thinking}
 
 In one of the foundational works of modern science, "Le Discours de la Méthode (1637)"  \footnote{Full title "Discourse on the Method of Rightly Conducting One's Reason and of Seeking Truth" \citep{Descartes-DiscourseMethodRightly-1673}}, René Descartes famously observed: 
 
@@ -87,7 +91,7 @@ In one of the foundational works of modern science, "Le Discours de la Méthode (
 Good sense is, of all things among men, the most equally distributed; for every one thinks himself so abundantly provided with it, that those even who are the most difficult to satisfy in everything else, do not usually desire a larger measure of this quality than they already possess.
 \end{quote}
 
-These words of one of the founding fathers of what we today consider Science are often read and cited as a sarcastic observation of human vanity. However, 
+These words of one of the founding fathers of what we today consider Science are often read and cited as a sarcastic observation of human vanity. However, if one continues reading, it becomes clear that Descartes may, after all, have been 
 
 \begin{quote}
 And in this it is not likely that all are mistaken the conviction is rather to be held as testifying that the power of judging aright and of distinguishing truth from error, which is properly what is called good sense or reason, is by nature equal in all men; and that the diversity of our opinions, consequently, does not arise from some being endowed with a larger share of reason than others, but solely from this, that we conduct our thoughts along different ways, and do not fix our attention on the same objects. 
@@ -100,21 +104,19 @@ For to be possessed of a vigorous mind is not enough; the prime requisite is rig
 
 \section{Logical fallacies}
 
+ href="https://bookofbadarguments.com/?view=allpages">An illustrated book of bad arguments</a>
 
 
 
-
-\chapter{Empricism and empirical work}
+\chapter{From empirical data to scientific conclusions}
 
 \section{A statistical reminder}
 
-\section{Design philosophies}
+\section{Experimental design}
 
 \section{Validity}
 
 \section{Reproducibility}
-
-\section{Statistical analysis}
 
 
 
@@ -147,10 +149,7 @@ Disclaimer ? Different people / disciplines have different opinions about writin
 
 \section{Oral presentation}
 
-\section{Written }
-
-
-\chapter{Scientific visualisation}
+\section{Scientific visualisation}
 
 
 Kelleher-Tenguidelineseffective-2011
